--- a/src/Components/Main/Card/Card.css
+++ b/src/Components/Main/Card/Card.css
@@ -76,6 +76,7 @@
     text-transform: uppercase;
     color: #fff;
     border-radius: 0 0 8px 8px;
+    cursor: pointer;
 }
 
 .card-btn-add:hover {
