Done homework Pagination

--- a/src/components/pagination/01-css-task/index.html
+++ b/src/components/pagination/01-css-task/index.html
@@ -16,6 +16,59 @@
 <main>
   <div class="wrapper">
     <!-- Pagination component -->
+
+    <div class="page-link back">
+      <a href="#">
+        <i class="bi bi-chevron-left"></i>
+      </a>
+    </div>
+    <ul class="page-list">
+      <li>
+        <a href="#" class="page-link active">1</a>
+      </li>
+      <li>
+        <a href="#" class="page-link">2</a>
+      </li>
+      <li>
+        <a href="#" class="page-link">3</a>
+      </li>
+      <li>
+        <a href="#" class="page-link">4</a>
+      </li>
+      <li>
+        <a href="#" class="page-link">5</a>
+      </li>
+      <li>
+        <a href="#" class="page-link">6</a>
+      </li>
+      <li>
+        <a href="#" class="page-link">7</a>
+      </li>
+      <li>
+        <a href="#" class="page-link">8</a>
+      </li>
+      <li>
+        <a href="#" class="page-link">9</a>
+      </li>
+      <li>
+        <a href="#" class="page-link">10</a>
+      </li>
+      <li>
+        <a href="#" class="page-link">11</a>
+      </li>
+      <li>
+        <a href="#" class="page-link">12</a>
+      </li>
+    </ul>
+
+    <div class="page-link next">
+      <a href="#">
+        <i class="bi bi-chevron-right"></i>
+      </a>
+    </div>
+
+
+
   </div>
 </main>
 </body>
