--- a/components/card/index.html
+++ b/components/card/index.html
@@ -1,22 +1,29 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8" />
-  <title>HTML/CSS Card component</title>
-  <link rel="stylesheet" href="style.css">
 
-  <style>
-    .wrapper {
-      width: 400px;
-      margin: 100px auto;
-    }
-  </style>
+<html lang="en">
+
+<head>
+  <meta charset="UTF-8">
+  <title>item card</title>
+  <link rel="stylesheet" href="/components/card/style.css">
 </head>
+
 <body>
-<main>
-  <div class="wrapper">
-    <!-- Card component -->
+  <div class="card">
+    <div class="card-content">
+      <div class="card-image"></div>
+      <div class="card-info">
+        <div class="card-rating">
+          <span>1.23</span>
+          <span><img src="/Star 1.png" alt="star"></span>
+        </div>
+        <div class="card-price">1599</div>
+      </div>
+      <div class="card-about-item">Ноутбук Acer Aspire 3 A315-57G-336G
+        (NX.HZREU.01S) Charcoal Black</div>
+      <div class="card-categories">Laptop</div>
+      <div class="card-add-to-card">ADD TO CART</div>
+    </div>
   </div>
-</main>
 </body>
 </html>
