--- a/components/pagination/index.html
+++ b/components/pagination/index.html
@@ -15,20 +15,20 @@
 
 <main>
   <div class="wrapper">
-    <div class="item-start"><</div>
-    <div class="item-1">1</div>
-    <div class="item-2">2</div>
-    <div class="item-3">3</div>
-    <div class="item-4">4</div>
-    <div class="item-5">5</div>
-    <div class="item-6">6</div>
-    <div class="item-7">7</div>
-    <div class="item-8">8</div>
-    <div class="item-9">9</div>
-    <div class="item-10">10</div>
-    <div class="item-11">11</div>
-    <div class="item-12">12</div>
-    <div class="item-end">></div>
+    <div class="item item-start"><</div>
+    <div class="item item-1">1</div>
+    <div class="item item-2">2</div>
+    <div class="item item-3">3</div>
+    <div class="item item-4">4</div>
+    <div class="item item-5">5</div>
+    <div class="item item-6">6</div>
+    <div class="item item-7">7</div>
+    <div class="item item-8">8</div>
+    <div class="item item-9">9</div>
+    <div class="item item-10">10</div>
+    <div class="item item-11">11</div>
+    <div class="item item-12">12</div>
+    <div class="item item-end">></div>
   </div>
 </main>
 
