--- a/src/components/card/01-css-task/index.html
+++ b/src/components/card/01-css-task/index.html
@@ -9,27 +9,25 @@
 </head>
 
 <body>
-  <main>
-    <div class="product-card">
-      <img class="product-image" src="../../../product-images/image_2022-04-18_14-22-40.png" alt="laptop">
-      <div class="product-rating-and-price">
-        <div class="product-rating">
-          <span class="product-rating-number">1.23</span>
-          <svg class="star-icon" width="14" height="12" viewbox="0 0 14 12" fill="none"
-            xmlns="http://www.w3.org/2000/svg">
-            <path
-              d="M7 0.940965L8.8394 3.87345L8.95364 4.05557L9.16441 4.09795L12.6648 4.80181L10.3013 7.25805L10.1392 7.42652L10.1645 7.65893L10.5264 10.9777L7.18936 9.61224L7 9.53476L6.81064 9.61224L3.47361 10.9777L3.83549 7.65893L3.86083 7.42652L3.69872 7.25805L1.3352 4.80181L4.83559 4.09795L5.04636 4.05557L5.1606 3.87345L7 0.940965Z"
-              stroke="white" />
-          </svg>
-        </div>
-        <span class="product-price">15999</span>
-      </div>
-      <span class="product-description">Ноутбук Acer Aspire 3 A315-57G-336G (NX.HZREU.01S) Charcoal Black</span>
-      <span class="product-category">laptops</span>
-      <button class="add-to-cart-btn">
-        <span class="cart-button-text">add to cart</span>
-      </button>
+  <main class="product-card">
+    <div class="product-image">
+      <img class="image" src="../../../product-images/image_2022-04-18_14-22-40.png" alt="laptop">
     </div>
+    <div class="product-rating-and-price mt-md">
+      <div class="product-rating">
+        <span class="product-rating-number">1.23</span>
+        <svg class="star-icon" width="14" height="12" viewbox="0 0 14 12" fill="none"
+          xmlns="http://www.w3.org/2000/svg">
+          <path
+            d="M7 0.940965L8.8394 3.87345L8.95364 4.05557L9.16441 4.09795L12.6648 4.80181L10.3013 7.25805L10.1392 7.42652L10.1645 7.65893L10.5264 10.9777L7.18936 9.61224L7 9.53476L6.81064 9.61224L3.47361 10.9777L3.83549 7.65893L3.86083 7.42652L3.69872 7.25805L1.3352 4.80181L4.83559 4.09795L5.04636 4.05557L5.1606 3.87345L7 0.940965Z"
+            stroke="white" />
+        </svg>
+      </div>
+      <span class="product-price">15999</span>
+    </div>
+    <span class="product-description mt-md">Ноутбук Acer Aspire 3 A315-57G-336G (NX.HZREU.01S) Charcoal Black</span>
+    <p class="product-category mt-md">laptops</p>
+    <button class="add-to-cart-btn">add to cart</button>
   </main>
 </body>
 
