added some changes and created card-component-js-task

--- a/src/components/card/01-css-task/index.html
+++ b/src/components/card/01-css-task/index.html
@@ -31,10 +31,7 @@
             <span class="card__info">laptops</span>
           </div>
         </div>
-        <div class="card__action">
-          <button class="card__btn">Add to cart
-          </button>
-        </div>
+          <button class="card__btn">Add to cart</button>
       </div>
     </div>
   </main>
