--- a/src/components/cards-list/01-css-task/index.html
+++ b/src/components/cards-list/01-css-task/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8" />
   <title>CardsList component</title>
@@ -12,118 +13,105 @@
     }
   </style>
 </head>
+
 <body>
-<main>
-  <div class="wrapper">
-    <!-- CardsList component -->
-    <div class="grid">
-      <!-- Card 1-->
-    <div class="card">
-      <div class="card__inner">
-        <img class="card__img" src="./img/notebook.jpg" alt="product" />
-        <div class="card__details">
-          <div class="card__rate-and-price">
-            <button class="card__product--rate">2.89&nbsp;
-              <img class="card__rate" src="./icons/star.svg" alt="icon star">
-            </button>
-            <span class="card__price">15999</span>
+  <main>
+    <div class="wrapper">
+      <!-- CardsList component -->
+      <div class="grid">
+        <!-- Card 1-->
+        <div class="card">
+          <div class="card__inner">
+            <img class="card__img" src="./img/notebook.jpg" alt="product" />
+            <div class="card__details">
+              <div class="card__rate-and-price">
+                <button class="card__product--rate">2.89&nbsp;
+                  <img class="card__rate" src="./icons/star.svg" alt="icon star">
+                </button>
+                <span class="card__price">15999</span>
+              </div>
+              <h4 class="card__title">Ноутбук Acer Aspire 3 A315-57G-336G <br> (NX.HZREU.01S) Charcoal Black</h4>
+              <span class="card__info">laptops</span>
+            </div>
           </div>
-          <h4 class="card__title">Ноутбук Acer Aspire 3 A315-57G-336G <br> (NX.HZREU.01S) Charcoal Black</h4>
-          <span class="card__info">laptops</span>
+          <button class="card__btn">Add to cart</button>
         </div>
-      </div>
-      <div class="card__action">
-        <button class="card__btn">Add to cart
-        </button>
+        <!-- End: Card-->
+        <!-- Card 2-->
+        <div class="card">
+          <div class="card__inner">
+            <img class="card__img" src="./img/notebook.jpg" alt="product" />
+            <div class="card__details">
+              <div class="card__rate-and-price">
+                <button class="card__product--rate">1.96&nbsp;
+                  <img class="card__rate" src="./icons/star.svg" alt="icon star">
+                </button>
+                <span class="card__price">21500</span>
+              </div>
+              <h4 class="card__title">Ноутбук Acer Aspire 7 A715-41G-R9KP <br> (NH.Q8QEU.00L) Charcoal Black</h4>
+              <span class="card__info">laptops</span>
+            </div>
+          </div>
+          <button class="card__btn">Add to cart</button>
+        </div>
+        <!-- End: Card-->
+        <!-- Card 3-->
+        <div class="card">
+          <div class="card__inner">
+            <img class="card__img" src="./img/notebook.jpg" alt="product" />
+            <div class="card__details">
+              <div class="card__rate-and-price">
+                <button class="card__product--rate">2.42&nbsp;
+                  <img class="card__rate" src="./icons/star.svg" alt="icon star">
+                </button>
+                <span class="card__price">22999</span>
+              </div>
+              <h4 class="card__title">Ноутбук Acer Aspire 7 A715-57G-51ZW <br> (NH.Q88EU.00P) Charcoal Black</h4>
+              <span class="card__info">laptops</span>
+            </div>
+          </div>
+          <button class="card__btn">Add to cart</button>
+        </div>
+        <!-- End: Card-->
+        <!-- Card 4-->
+        <div class="card">
+          <div class="card__inner">
+            <img class="card__img" src="./img/Acer-Nitro-5.png" alt="product" />
+            <div class="card__details">
+              <div class="card__rate-and-price">
+                <button class="card__product--rate">0.53&nbsp;
+                  <img class="card__rate" src="./icons/star.svg" alt="icon star">
+                </button>
+                <span class="card__price">28999</span>
+              </div>
+              <h4 class="card__title">Ноутбук Acer Nitro 5 AN515-55-56WH <br> (NH.Q7PEU.00L) Obsidian Black</h4>
+              <span class="card__info">laptops</span>
+            </div>
+          </div>
+          <button class="card__btn">Add to cart</button>
+        </div>
+        <!-- End: Card-->
+        <!-- Card 5-->
+        <div class="card">
+          <div class="card__inner">
+            <img class="card__img" src="./img/notebook.jpg" alt="product" />
+            <div class="card__details">
+              <div class="card__rate-and-price">
+                <button class="card__product--rate">3.2&nbsp;
+                  <img class="card__rate" src="./icons/star.svg" alt="icon star">
+                </button>
+                <span class="card__price">22500</span>
+              </div>
+              <h4 class="card__title">Ноутбук Acer Aspire 7 A715-75G-57LR <br> (NH.Q87EU.006) Charcoal Black</h4>
+              <span class="card__info">laptops</span>
+            </div>
+          </div>
+          <button class="card__btn">Add to cart</button>
+        </div>
+        <!-- End: Card-->
       </div>
     </div>
-    <!-- End: Card-->
-      <!-- Card 2-->
-    <div class="card">
-      <div class="card__inner">
-        <img class="card__img" src="./img/notebook.jpg" alt="product" />
-        <div class="card__details">
-          <div class="card__rate-and-price">
-            <button class="card__product--rate">1.96&nbsp;
-              <img class="card__rate" src="./icons/star.svg" alt="icon star">
-            </button>
-            <span class="card__price">21500</span>
-          </div>
-          <h4 class="card__title">Ноутбук Acer Aspire 7 A715-41G-R9KP <br> (NH.Q8QEU.00L) Charcoal Black</h4>
-          <span class="card__info">laptops</span>
-        </div>
-      </div>
-      <div class="card__action">
-        <button class="card__btn">Add to cart
-        </button>
-      </div>
-    </div>
-    <!-- End: Card-->
-      <!-- Card 3-->
-    <div class="card">
-      <div class="card__inner">
-        <img class="card__img" src="./img/notebook.jpg" alt="product" />
-        <div class="card__details">
-          <div class="card__rate-and-price">
-            <button class="card__product--rate">2.42&nbsp;
-              <img class="card__rate" src="./icons/star.svg" alt="icon star">
-            </button>
-            <span class="card__price">22999</span>
-          </div>
-          <h4 class="card__title">Ноутбук Acer Aspire 7 A715-57G-51ZW <br> (NH.Q88EU.00P) Charcoal Black</h4>
-          <span class="card__info">laptops</span>
-        </div>
-      </div>
-      <div class="card__action">
-        <button class="card__btn">Add to cart
-        </button>
-      </div>
-    </div>
-    <!-- End: Card-->
-      <!-- Card 4-->
-    <div class="card">
-      <div class="card__inner">
-        <img class="card__img" src="./img/Acer-Nitro-5.png" alt="product" />
-        <div class="card__details">
-          <div class="card__rate-and-price">
-            <button class="card__product--rate">0.53&nbsp;
-              <img class="card__rate" src="./icons/star.svg" alt="icon star">
-            </button>
-            <span class="card__price">28999</span>
-          </div>
-          <h4 class="card__title">Ноутбук Acer Nitro 5 AN515-55-56WH <br> (NH.Q7PEU.00L) Obsidian Black</h4>
-          <span class="card__info">laptops</span>
-        </div>
-      </div>
-      <div class="card__action">
-        <button class="card__btn">Add to cart
-        </button>
-      </div>
-    </div>
-    <!-- End: Card-->
-      <!-- Card 5-->
-    <div class="card">
-      <div class="card__inner">
-        <img class="card__img" src="./img/notebook.jpg" alt="product" />
-        <div class="card__details">
-          <div class="card__rate-and-price">
-            <button class="card__product--rate">3.2&nbsp;
-              <img class="card__rate" src="./icons/star.svg" alt="icon star">
-            </button>
-            <span class="card__price">22500</span>
-          </div>
-          <h4 class="card__title">Ноутбук Acer Aspire 7 A715-75G-57LR <br> (NH.Q87EU.006) Charcoal Black</h4>
-          <span class="card__info">laptops</span>
-        </div>
-      </div>
-      <div class="card__action">
-        <button class="card__btn">Add to cart
-        </button>
-      </div>
-    </div>
-    <!-- End: Card-->
-  </div>
-  </div>
-</main>
+  </main>
 </body>
+
 </html>
