--- a/src/components/card/02-js-task/style.css
+++ b/src/components/card/02-js-task/style.css
@@ -1,8 +1,6 @@
-/* put your styles in this file */
+@import url(https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css);
+
 .card {
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
   width: 400px;
   min-height: 480px;
   margin: 0 auto;
@@ -64,6 +62,7 @@
   padding: 7px;
   border: none;
   line-height: 1.2;
+  cursor: pointer;
 }
 
 .card__rate {
@@ -82,14 +81,9 @@
   font-weight: 400;
   text-transform: uppercase;
   border: none;
+  cursor: pointer;
 }
 
 .card__icon {
   margin-right: 10px;
-}
-
-.grid {
-  display: grid;
-  grid-template-columns: repeat(3, 1fr);
-  gap: 28px;
 }
