--- a/src/components/cards-list/01-css-task/style.css
+++ b/src/components/cards-list/01-css-task/style.css
@@ -4,22 +4,17 @@
   font-weight: 400;
 }
 
-.wrapper {
-  width: 100%;
-  height: 100%;
-  margin-bottom: 30px;
-}
-
-.product-card-list{
-  width: 100%;
+.product-card-list {
   display: flex;
-  flex-direction: row;
   flex-wrap: wrap;
 }
 
 .product-card {
-  height: 394px;
-  width: 317px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  height: 400px;
+  width: 320px;
   border-radius: 8px;
   background-color: #FFFFFF;
   box-shadow: 0px 2px 8px rgba(0, 0, 0, 0.133);
@@ -27,81 +22,65 @@
 }
 
 .product-image {
-  width: 293px;
-  height: 200px;
-  margin-top: 12px;
-  margin-left: 12px;
-  margin-right: 12px;
+  display: flex;
+  justify-content: center;
+  margin: 12px 12px 0;
 }
 
-.product-rating {
-  display: flex;
-  align-items: center;
-  justify-content: space-around;
-  box-sizing: border-box;
-  margin-top: 20px;
-  padding: 5px;
-  width: 70px;
-  height: 27px;
-  background-color: #7E72F2;
-  border-radius: 3px;
-  color: white;
-  font-size: 13px;
-  line-height: 14px;
+.image {
+  width: 100%;
 }
 
-.product-price {
-  display: flex;
-  width: 43px;
-  height: 18px;
-  font-size: 15px;
-  line-height: 18px;
-  margin-top: 23px;
+.mt-md {
+  margin-left: 25px;
 }
 
 .product-rating-and-price {
   display: flex;
   justify-content: space-between;
-  margin-bottom: 15px;
-  margin-left: 24px;
   margin-right: 24px;
 }
 
+.product-rating {
+  background-color: #7E72F2;
+  border-radius: 3px;
+  color: white;
+  font-size: 13px;
+  line-height: 14px;
+  padding: 5px 10px 5px 10px;
+  margin-top: 20px;
+}
+
+.star-icon {
+  margin-left: 5px;
+}
+
+.product-price {
+  font-size: 15px;
+  line-height: 18px;
+  margin-top: 23px;
+}
+
 .product-description {
-  display: inline-block;
-  width: 261px;
-  height: 32px;
   font-size: 13px;
   line-height: 16px;
-  margin-left: 24px;
-  margin-right: 32px;
-  margin-bottom: 10px;
+  margin-top: 20px;
+  word-wrap: normal;
 }
 
 .product-category {
-  display: inline-block;
-  margin-left: 24px;
-  margin-bottom: 16px;
-  width: 39px;
-  height: 12px;
   font-size: 10px;
   line-height: 12px;
+  margin-top: 10px;
 }
 
 .add-to-cart-btn {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  width: 317px;
+  width: 100%;
   height: 40px;
   background-color: #7E72F2;
   border-radius: 0px 0px 5px 5px;
   border: none;
-}
-
-.cart-button-text {
-  width: 86px;
-  height: 13px;
+  margin-top: 15px;
   font-size: 12px;
   line-height: 12px;
   text-align: center;
@@ -112,6 +91,7 @@
 .add-to-cart-btn:hover {
   background-color: hsla(246, 100%, 70%, 1);
 }
+
 
 .col-1 {
   width: calc(100% / 12);
