modified solution js-file

--- a/src/components/card/02-js-task/index.html
+++ b/src/components/card/02-js-task/index.html
@@ -19,7 +19,7 @@
   <div id="root" class="wrapper"></div>
 
   <script type="module">
-    import Card from './solution/index.js';
+    import Card from './index.js';
 
     const product = {
       "id": "76w0hz7015kkr9kjkav",
