Done Homework Product card

--- a/src/components/card/01-css-task/index.html
+++ b/src/components/card/01-css-task/index.html
@@ -4,19 +4,40 @@
   <meta charset="UTF-8" />
   <title>Card component</title>
   <link rel="stylesheet" href="style.css">
-
-  <style>
-    .wrapper {
-      width: 400px;
-      margin: 100px auto;
-    }
-  </style>
 </head>
+
 <body>
-<main>
-  <div class="wrapper">
-    <!-- Card component -->
-  </div>
-</main>
+  <main>
+      <div class="card">
+        <div class="card-1">
+          <div class="card-content-image">
+            <img src="/Image/laptope.jpg" alt="Laptop">
+          </div>
+
+          <div class="card-content-rating-price">
+            <div class="card-content-rating">
+              <p class="card-content-text-button">1.25</p>
+              <i class="bi bi-star"></i>
+            </div>
+            <p class="card-content-text">15999</p>
+          </div>
+
+          <div class="card-content-name">
+            <p class="card-content-text">Ноутбук Acer Aspire 3 A315-57G-336G (NX.HZREU.01S) Charcoal Black</p>
+          </div>
+
+          <div class="card-content-category">
+            <p class="card-content-text"><small>laptops</small></p>
+          </div>
+        </div>
+
+
+        <div class="card-2">
+          <div class="card-content-button">
+            <div class="card-content-text-button">ADD TO CART</div>
+          </div>
+        </div>
+      </div>
+  </main>
 </body>
 </html>
