--- a/src/components/cards-list/01-css-task/style.css
+++ b/src/components/cards-list/01-css-task/style.css
@@ -1,1 +1,222 @@
-/* put your styles in this file */
+
+html,
+body {
+  height: 100%;
+  margin: 0;
+}
+
+h1, h2, h3, h4, h5, h6 {
+  margin: 0;
+  padding: 0;
+}
+
+p {
+  margin: 0;
+}
+
+a {
+  all: unset;
+}
+
+
+:root {
+  --purple-100: #7E72F2;
+  --wite: #FFFFFF;
+}
+
+.card-component-box {
+  /* width: 100%; */
+  /* min-width: 300px; */
+   /* width: calc(100% / 12 * 2); */
+  height: 394px;
+  background: var(--wite);
+  box-shadow: 0px 2px 8px rgba(0, 0, 0, 0.133);
+  border-radius: 8px;
+  font-family: 'Montserrat', sans-serif;
+  color: #2C2C2C;
+  font-weight: 400;
+  position: relative;
+  /* margin: 0 10px 20px 10px; */
+  box-sizing: border-box;
+}
+
+.card-content {
+  padding-top: 12px;
+  display: flex;
+  flex-direction: column;
+}
+
+.card-product-image {
+ /* width: 293px; */
+ height: 200px;
+ margin: auto;
+ display: flex;
+ justify-content: center;
+}
+
+.product-image {
+  width: 100%;
+}
+
+.content-details {
+  margin: 22px;
+}
+.card-purple-elements {
+  background-color: var(--purple-100);
+  color: var(--wite);
+}
+
+.product-price-reating-wrapper {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-bottom: 22px;
+}
+
+.card-rating {
+  width: 70px;
+  height: 27px;
+  font-size: 13px;
+  border-radius: 3px;
+  box-sizing: border-box;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+}
+
+.bi {
+  margin-bottom: 3px;
+}
+
+.card-product-price {
+  font-size: 16px;
+}
+
+.card-product-name {
+  font-size: 13px;
+  line-height: 16px;
+  display: block;
+}
+
+.card-product-type {
+  font-size: 10px;
+  line-height: 12px;
+  margin-top: 10px;
+}
+
+.card-add-button {
+  width: 100%;
+  height: 40px;
+  border: none;
+  border-radius: 0px 0px 5px 5px;
+  font-family: inherit;
+  font-weight: inherit;
+  text-transform: uppercase;
+  font-size: 12px;
+  position: absolute;
+  bottom: 0;
+}
+
+.card-cursor-pointer {
+  cursor: pointer;
+}
+
+/* media-query */
+
+.wrapper {
+  background-color: lightblue;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  margin-top: 20px;
+
+}
+
+.card-wrapper {
+  box-sizing: border-box;
+  padding: 0 10px;
+  display: flex;
+  justify-content: center;
+  margin-top: 20px;
+}
+
+.col-1 {
+  width: calc(100% / 12);
+}
+
+.col-2 {
+  width: calc(100% / 12 * 2);
+}
+
+.col-3 {
+  width: calc(100% / 12 * 3);
+}
+
+.col-4 {
+  width: calc(100% / 12 * 4);
+}
+
+.col-5 {
+  width: calc(100% / 12 * 5);
+}
+
+.col-6 {
+  width: calc(100% / 12 * 6);
+}
+
+.col-7 {
+  width: calc(100% / 12 * 7);
+}
+
+.col-8 {
+  width: calc(100% / 12 * 8);
+}
+
+.col-9 {
+  width: calc(100% / 12 * 9);
+}
+
+.col-10 {
+  width: calc(100% / 12 * 10);
+}
+
+.col-11 {
+  width: calc(100% / 12 * 11);
+}
+
+.col-12 {
+  width: calc(100% / 12 * 12);
+}
+
+
+@media (max-width: 919px) {
+  .wrapper {
+    width: 614px;
+  }
+
+  .card-wrapper {
+    width: 307px;
+  }
+}
+
+/* m */
+@media (min-width: 920px) {
+  .col-m-6 {
+    width: calc(100% / 12 * 6);
+  }
+  .col-m-8 {
+    width: calc(100% / 12 * 8);
+  }
+}
+
+/* l */
+@media (min-width: 1120px) {
+  .col-l-4 {
+    width: calc(100% / 12 * 4);
+  }
+  .col-l-8 {
+    width: calc(100% / 12 * 8);
+  }
+}
+
+
