--- a/src/components/card/01-css-task/index.html
+++ b/src/components/card/01-css-task/index.html
@@ -1,31 +1,36 @@
-<<<<<<< HEAD:components/card/index.html
-<style>
-  .wrapper {
-    width: 400px;
-    margin: 100px auto;
-  }
-</style>
-=======
+
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
   <title>Card component</title>
   <link rel="stylesheet" href="style.css">
-
-  <style>
-    .wrapper {
-      width: 400px;
-      margin: 100px auto;
-    }
-  </style>
->>>>>>> 90570a75df782cf18caad6d0d8db20d594bf615d:src/components/card/01-css-task/index.html
 </head>
 <body>
 <main>
-<div class="wrapper">
-  <!-- Card component -->
-</div>
+  <div class="wrapper">
+    <article class="product">
+      <div class="product-image">
+        <img src="../img/photo1.jpg" alt="photo" />
+      </div>
+      <div class="rating-price">
+        <div class="rating">
+          <button class="btn-f">
+            0,53
+            <img src="../img/Star1.svg" alt="photo" />
+          </button>
+        </div>
+        <div class="price">15999</div>
+      </div>
+      <h5 class="card-list">
+        Ноутбук Acer Aspire 3 A315-57G-336G <br />
+        (NX.HZREU.01S) Charcoal Black
+      </h5>
+      <p class="card-line">laptops</p>
+      <button class="btn-card">ADD TO CART</button>
+    </article>
+  </div>
 </main>
 </body>
 </html>
