--- a/src/components/cards-list/01-css-task/index.html
+++ b/src/components/cards-list/01-css-task/index.html
@@ -1,21 +1,121 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8" />
-  <title>CardsList component</title>
-  <link rel="stylesheet" href="style.css">
+  <head>
+    <meta charset="UTF-8" />
+    <title>CardsList component</title>
+    <link rel="stylesheet" href="style.css" />
 
-  <style>
-    .wrapper {
-
-    }
-  </style>
-</head>
-<body>
-<main>
-  <div class="wrapper">
-    <!-- CardsList component -->
-  </div>
-</main>
-</body>
+    <style>
+      .wrapper {
+      }
+    </style>
+  </head>
+  <body>
+    <main>
+      <div class="wrapper">
+        <div class="products-grid">
+          <article class="product">
+            <div class="product-image">
+              <img src="img/photo1.jpg" alt="" />
+            </div>
+            <div class="rating-price">
+              <div class="rating">
+                <button class="btn-f">
+                  0,53
+                  <img src="img/Star1.svg" alt="" />
+                </button>
+              </div>
+              <div class="price">15999</div>
+            </div>
+            <h5 class="cart-list">
+              Ноутбук Acer Aspire 3 A315-57G-336G <br />
+              (NX.HZREU.01S) Charcoal Black
+            </h5>
+            <p class="cart-line">laptops</p>
+            <button class="btn-cart">ADD TO CART</button>
+          </article>
+          <article class="product">
+            <div class="product-image">
+              <img src="img/photo2.jpg" alt="" />
+            </div>
+            <div class="rating-price">
+              <div class="rating">
+                <button class="btn-f">
+                  0,53
+                  <img src="img/Star1.svg" alt="" />
+                </button>
+              </div>
+              <div class="price">15999</div>
+            </div>
+            <h5 class="cart-list">
+              Ноутбук Acer Aspire 3 A315-57G-336G <br />
+              (NX.HZREU.01S) Charcoal Black
+            </h5>
+            <p class="cart-line">laptops</p>
+            <button class="btn-cart">ADD TO CART</button>
+          </article>
+          <article class="product">
+            <div class="product-image">
+              <img src="img/photo3.jpg" alt="" />
+            </div>
+            <div class="rating-price">
+              <div class="rating">
+                <button class="btn-f">
+                  0,53
+                  <img src="img/Star1.svg" alt="" />
+                </button>
+              </div>
+              <div class="price">15999</div>
+            </div>
+            <h5 class="cart-list">
+              Ноутбук Acer Aspire 3 A315-57G-336G <br />
+              (NX.HZREU.01S) Charcoal Black
+            </h5>
+            <p class="cart-line">laptops</p>
+            <button class="btn-cart">ADD TO CART</button>
+          </article>
+          <article class="product">
+            <div class="product-image">
+              <img src="img/photo4.jpg" alt="" />
+            </div>
+            <div class="rating-price">
+              <div class="rating">
+                <button class="btn-f">
+                  0,53
+                  <img src="img/Star1.svg" alt="" />
+                </button>
+              </div>
+              <div class="price">15999</div>
+            </div>
+            <h5 class="cart-list">
+              Ноутбук Acer Aspire 3 A315-57G-336G <br />
+              (NX.HZREU.01S) Charcoal Black
+            </h5>
+            <p class="cart-line">laptops</p>
+            <button class="btn-cart">ADD TO CART</button>
+          </article>
+          <article class="product">
+            <div class="product-image">
+              <img src="img/photo5.jpg" alt="" />
+            </div>
+            <div class="rating-price">
+              <div class="rating">
+                <button class="btn-f">
+                  0,53
+                  <img src="img/Star1.svg" alt="" />
+                </button>
+              </div>
+              <div class="price">15999</div>
+            </div>
+            <h5 class="cart-list">
+              Ноутбук Acer Aspire 3 A315-57G-336G <br />
+              (NX.HZREU.01S) Charcoal Black
+            </h5>
+            <p class="cart-line">laptops</p>
+            <button class="btn-cart">ADD TO CART</button>
+          </article>
+        </div>
+      </div>
+    </main>
+  </body>
 </html>
