--- a/src/components/search-box/01-css-task/index.html
+++ b/src/components/search-box/01-css-task/index.html
@@ -3,20 +3,17 @@
 <head>
   <meta charset="UTF-8" />
   <title>SearchBox component</title>
-
   <link rel="stylesheet" href="style.css">
-
-  <style>
-    .wrapper {
-      width: 400px;
-      margin: 100px auto;
-    }
-  </style>
 </head>
 <body>
 <main>
   <div class="wrapper">
-    <!-- SearchBox component -->
+   <form action="#">
+     <div class="form-input icon">
+        <input id="search-input" type="text" data-element="search" placeholder="Search">
+        <label class="bi bi-search input-icon" for="search-input"></label>
+     </div>
+   </form>
   </div>
 </main>
 </body>
