--- a/src/components/cards-list/01-css-task/style.css
+++ b/src/components/cards-list/01-css-task/style.css
@@ -1,1 +1,68 @@
 /* put your styles in this file */
+body {
+ width:1100px;
+}
+.wrapper {
+  width: 1020px;
+  margin:100px auto;
+  padding: 30px;
+  background-color: rgb(205, 234, 224);
+}
+.products-grid {
+  display: grid;
+  grid-template-columns: repeat(3,1fr);
+  grid-gap: 30px;
+
+}
+
+.product {
+
+    width: 317px;
+    background-color: #fff;
+    box-sizing: border-box;
+    margin: auto;
+
+}
+.product-image {
+  margin: 20px 10px;
+  height: 200px;
+}
+.rating-price {
+  display: flex;
+  justify-content:space-between;
+  margin: 10px 30px  20px 30px;
+}
+.rating {
+}
+.btn-f {
+  width: 70px;
+  height: 27px;
+  background-color: #7E72F2;
+  color: #FFFFFF;
+  border-radius: 3px;
+  border: none;
+  font-size: 12px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+.price {
+  font-weight: 400;
+}
+.cart-list {
+  margin: 0 0px 8px 30px ;
+  font-size: 14px;
+}
+
+.cart-line {
+  margin-left: 28px;
+}
+.btn-cart {
+  width: 100%;
+  height: 40px;
+  background-color: #7E72F2;
+  color:  #FFFFFF;
+  border: none;
+  border-radius: 0 0 5px 5px;
+  text-transform: uppercase;
+}
