--- a/src/components/pagination/01-css-task/index.html
+++ b/src/components/pagination/01-css-task/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <title>Pagination component</title>
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="../01-css-task/style.css">
 
   <style>
     .wrapper {
@@ -15,8 +15,57 @@
 <body>
 <main>
   <div class="wrapper">
-    <!-- Pagination component -->
-  </div>
+
+    <nav class="nav-pagination">
+
+      <a href="#" class="page-link previous" data-element="nav-text">
+        <i class="bi bi-chevron-left"></i>
+      </a>
+
+      <ul class="page-list" data-element="pagination">
+        <li>
+          <a href="#" data-element="page-link" class="page-link active" data-page-index="1">1</a>
+        </li>
+        <li>
+         <a href="#" data-element="page-link" class="page-link" data-page-index="2">2</a>
+       </li>
+       <li>
+         <a href="#" data-element="page-link" class="page-link" data-page-index="3">3</a>
+       </li>
+       <li>
+         <a href="#" data-element="page-link" class="page-link" data-page-index="4">4</a>
+       </li>
+        <li>
+         <a href="#" data-element="page-link" class="page-link" data-page-index="5">5</a>
+       </li>
+       <li>
+         <a href="#" data-element="page-link" class="page-link" data-page-index="6">6</a>
+       </li>
+       <li>
+        <a href="#" data-element="page-link" class="page-link" data-page-index="7">7</a>
+      </li>
+       <li>
+        <a href="#" data-element="page-link" class="page-link" data-page-index="8">8</a>
+      </li>
+      <li>
+        <a href="#" data-element="page-link" class="page-link" data-page-index="9">9</a>
+      </li>
+      <li>
+        <a href="#" data-element="page-link" class="page-link" data-page-index="10">10</a>
+      </li>
+       <li>
+        <a href="#" data-element="page-link" class="page-link" data-page-index="11">11</a>
+      </li>
+      <li>
+       <a href="#" data-element="page-link" class="page-link" data-page-index="12">12</a>
+     </li>
+     </ul>
+     <a href="#" class="page-link next" data-element="nav-text">
+       <i class="bi bi-chevron-right"></i>
+     </a>
+
+    </nav>
+   </div>
 </main>
 </body>
 </html>
