--- a/src/components/pagination/01-css-task/style.css
+++ b/src/components/pagination/01-css-task/style.css
@@ -1,3 +1,56 @@
 @import url("https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css");
 
 /* put your styles in this file */
+.wrapper {
+  margin-top: 40px;
+  margin-bottom: 10px;
+  height: 90px;
+  padding-top: 50px;
+  background-color: rgb(206, 240, 239);
+}
+.nav-pagination {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.previous,
+.next  {
+  color: #000;
+}
+.previous {
+  margin-right: 15px;
+}
+.next {
+  margin-left: 15px;
+}
+
+.page-list {
+  display: flex;
+  margin: 0;
+  padding: 0;
+  list-style: none;
+}
+.page-link {
+  width: 40px;
+  height: 40px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+   background-color: #EDEDED;
+   border-radius: 50%;
+   color: #2c2c2c;
+   transition: .3c;
+   line-height: 1;
+   text-decoration: none;
+}
+
+.page-link:hover,
+.page-link.active {
+  color: #fff;
+  background-color: #7e72f2;
+}
+.bi {
+  font-size: 18px;
+}
+
+
