--- a/src/components/search-box/01-css-task/style.css
+++ b/src/components/search-box/01-css-task/style.css
@@ -1,3 +1,36 @@
 @import url("https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css");
 
 /* put your styles in this file */
+
+.wrapper {
+    padding: 60px ;
+    width: 400px;
+    background-color: rgb(205, 241, 228);
+    margin: 100px auto;
+}
+.form-input {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    background-color: white;
+    border-radius: 8px;
+    box-shadow: 0 2px 8px;
+    font-family: Montserrat;
+    font-weight: 300;
+    border: none;
+    height: 45px;
+}
+.search-input {
+
+
+}
+.icon {
+
+}
+.bi {
+    margin-right: 30px;
+}
+.bi-search {
+
+}
+
