--- a/src/components/cards-list/02-js-task/style.css
+++ b/src/components/cards-list/02-js-task/style.css
@@ -1,6 +1,9 @@
 @import url(https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css);
 
 .card {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
   width: 400px;
   min-height: 480px;
   margin: 0 auto;
@@ -62,7 +65,6 @@
   padding: 7px;
   border: none;
   line-height: 1.2;
-  cursor: pointer;
 }
 
 .card__rate {
@@ -78,5 +80,10 @@
   font-weight: 400;
   text-transform: uppercase;
   border: none;
-  cursor: pointer;
+}
+
+.grid {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  gap: 28px;
 }
