--- a/src/components/cart/01-css-task/style.css
+++ b/src/components/cart/01-css-task/style.css
@@ -67,18 +67,14 @@ body {
 
 .cart-total {
   text-align: center;
-  margin-bottom: 10px;
-}
-
-.cart-action {
-  display: flex;
-  justify-content: center;
+  margin-bottom: 20px;
 }
 
 .cart-btn {
-  display: inline-flex;
+  display: flex;
   justify-content: center;
   align-items: center;
+  margin: 0 auto;
   background-color: #6f64f8;
   color: #fff;
   padding: 14px;
