--- a/src/components/pagination/01-css-task/index.html
+++ b/src/components/pagination/01-css-task/index.html
@@ -1,22 +1,34 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <title>Pagination component</title>
-  <link rel="stylesheet" href="style.css">
+  <meta charset="UTF-8">
 
-  <style>
-    .wrapper {
-      width: 800px;
-      margin: 100px auto;
-    }
-  </style>
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css">
+  <link rel="stylesheet" href="../../../styles/reset.css">
+  <link rel="stylesheet" href="style.css">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+
+  <title>Document</title>
+
 </head>
 <body>
-<main>
-  <div class="wrapper">
-    <!-- Pagination component -->
-  </div>
-</main>
+<div class="wrapper">
+  <ul class="pagination">
+    <li class="pagination-element bi bi-chevron-left"></li>
+    <li class="pagination-element active">1</li>
+    <li class="pagination-element">2</li>
+    <li class="pagination-element">3</li>
+    <li class="pagination-element">4</li>
+    <li class="pagination-element">5</li>
+    <li class="pagination-element">6</li>
+    <li class="pagination-element">7</li>
+    <li class="pagination-element">8</li>
+    <li class="pagination-element">9</li>
+    <li class="pagination-element">10</li>
+    <li class="pagination-element">11</li>
+    <li class="pagination-element">12</li>
+    <li class="pagination-element bi bi-chevron-right"></li>
+  </ul>
+</div>
 </body>
 </html>
