--- a/src/components/pagination/01-css-task/style.css
+++ b/src/components/pagination/01-css-task/style.css
@@ -1,3 +1,34 @@
 @import url("https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css");
 
 /* put your styles in this file */
+.wrapper{
+  margin: 100px auto;
+  width: 790px;
+}
+.pagination{
+  display: flex;
+  flex-direction: row;
+  margin: 0 auto;
+  width: 100%;
+  align-items: center;
+  justify-content: center;
+}
+.pagination-element{
+  display: flex;
+  font-size: 10px;
+  border-radius: 50%;
+  background: var(--background-grey);
+  height: 40px;
+  width: 40px;
+  align-items: center;
+  justify-content: center;
+
+}
+.pagination>li:first-child,.pagination>li:last-child{
+  margin:1rem;
+}
+
+.pagination-element:hover, .pagination>.active{
+  background: var(--main-color);
+  color: var(--white-color);
+}
