--- a/src/components/cart/02-js-task/index.html
+++ b/src/components/cart/02-js-task/index.html
@@ -3,14 +3,17 @@
 <head>
   <meta charset="UTF-8" />
   <title>Cart component</title>
-  <link rel="stylesheet" href="../../../styles/style.min.css">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
 <main>
   <div id="root"></div>
 
   <script type="module">
-    import Cart from './solution/index.js';
+    import Cart from './index.js';
     import { products } from '../../../fixtures/products.js';
 
     const cart = new Cart();
