--- a/src/components/cart/02-js-task/style.css
+++ b/src/components/cart/02-js-task/style.css
@@ -1,5 +1,3 @@
-/* put your styles in this file */
-/*@import "https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css";*/
 * {
   margin: 0;
   padding: 0;
@@ -35,7 +33,7 @@ body {
   box-shadow: 0px 2px 8px rgba(0, 0, 0, 0.15);
   border-radius: 3px;
   padding: 15px 0;
-  margin: 10px;
+  margin: 20px;
 }
 
 .cart-item__img {
@@ -45,7 +43,8 @@ body {
 .cart-item__list {
   display: flex;
   flex-direction: column;
-  gap: 10px;
+  gap: 15px;
+  margin: 50px auto;
 }
 
 .cart-item__title {
